--- a/ShowMeTheMoney/ShowMeTheMoney/ShowMeTheMoney.csproj
+++ b/ShowMeTheMoney/ShowMeTheMoney/ShowMeTheMoney.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject>ShowMeTheMoney.Program</StartupObject>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="Npgsql">
       <HintPath>..\..\..\..\..\..\Work\Npgsql2.0.11.91-bin-ms.net4.0\Npgsql.dll</HintPath>
@@ -53,7 +56,12 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="CardDeckViewModel.cs" />
+    <Compile Include="accounts.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="accounts.Designer.cs">
+      <DependentUpon>accounts.cs</DependentUpon>
+    </Compile>
     <Compile Include="DBAccess.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -61,12 +69,39 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="investment.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="investment.Designer.cs">
+      <DependentUpon>investment.cs</DependentUpon>
+    </Compile>
+    <Compile Include="loginbox.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="loginbox.Designer.cs">
+      <DependentUpon>loginbox.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Quote.cs" />
+    <Compile Include="stock.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="stock.Designer.cs">
+      <DependentUpon>stock.cs</DependentUpon>
+    </Compile>
     <Compile Include="YahooStockEngine.cs" />
+    <EmbeddedResource Include="accounts.resx">
+      <DependentUpon>accounts.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="investment.resx">
+      <DependentUpon>investment.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="loginbox.resx">
+      <DependentUpon>loginbox.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
